Got most of barcode done.
Still need to do methods and supplementary material

--- a/references.bib
+++ b/references.bib
@@ -79,6 +79,9 @@
 	pages = {1104--1115}
 },
 
+@article{__????
+},
+
 @article{seeman_nucleic_1982,
 	title = {Nucleic acid junctions and lattices},
 	volume = {99},
@@ -803,7 +806,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {4634--4643}
 },
 
-@misc{__????,
+@misc{__????-1,
 	url = {http://www.pnas.org/content/102/9/3184.full.pdf+html}
 },
 
@@ -1327,6 +1330,22 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {439--456}
 },
 
+@article{rajendran_photo-cross-linking-assisted_2011,
+	title = {Photo-cross-linking-assisted thermal stability of {DNA} origami structures and its application for higher-temperature self-assembly},
+	volume = {133},
+	issn = {1520-5126},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21859143},
+	doi = {10.1021/ja204546h},
+	abstract = {Heat tolerance of {DNA} origami structures has been improved about 30 {°C} by photo-cross-linking of 8-methoxypsoralen. To demonstrate one of its applications, the cross-linked origami were used for higher-temperature self-assembly, which markedly increased the yield of the assembled product when compared to the self-assembly of non-cross-linked origami at lower-temperature. By contrast, at higher-temperature annealing, native non-cross-linked tiles did not self-assemble to yield the desired product; however, they formed a nonspecific broken structure.},
+	number = {37},
+	journal = {Journal of the American Chemical Society},
+	author = {Rajendran, Arivazhagan and Endo, Masayuki and Katsuda, Yousuke and Hidaka, Kumi and Sugiyama, Hiroshi},
+	month = sep,
+	year = {2011},
+	note = {{PMID:} 21859143},
+	pages = {14488--14491}
+},
+
 @article{dent_genetics_2000,
 	title = {The genetics of ivermectin resistance in Caenorhabditis elegans},
 	volume = {97},
@@ -1455,6 +1474,22 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {383--396}
 },
 
+@article{bellot_recovery_2011,
+	title = {Recovery of intact {DNA} nanostructures after agarose gel-based separation},
+	volume = {8},
+	issn = {1548-7105},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21358621},
+	doi = {10.1038/nmeth0311-192},
+	number = {3},
+	journal = {Nature Methods},
+	author = {Bellot, Gaëtan and {McClintock}, Mark A and Lin, Chenxiang and Shih, William M},
+	month = mar,
+	year = {2011},
+	note = {{PMID:} 21358621},
+	keywords = {{DNA}, Electrophoresis, Agar Gel, Gels, Microscopy, Electron, Transmission, Nanostructures, Sepharose},
+	pages = {192--194}
+},
+
 @article{ermentrout_frequency_1984,
 	title = {Frequency Plateaus in a Chain of Weakly Coupled Oscillators, I.},
 	volume = {15},
@@ -1465,6 +1500,23 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	author = {Ermentrout, George Bard and Kopell, Nancy},
 	year = {1984},
 	pages = {215}
+},
+
+@article{jones_fast_2011,
+	title = {Fast, three-dimensional super-resolution imaging of live cells},
+	volume = {8},
+	issn = {1548-7105},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21552254},
+	doi = {10.1038/nmeth.1605},
+	abstract = {We report super-resolution fluorescence imaging of live cells with high spatiotemporal resolution using stochastic optical reconstruction microscopy {(STORM).} By labeling proteins either directly or via {SNAP} tags with photoswitchable dyes, we obtained two-dimensional {(2D)} and {3D} super-resolution images of living cells, using clathrin-coated pits and the transferrin cargo as model systems. Bright, fast-switching probes enabled us to achieve {2D} imaging at spatial resolutions of ∼25 nm and temporal resolutions as fast as 0.5 s. We also demonstrated live-cell {3D} super-resolution imaging. We obtained {3D} spatial resolution of ∼30 nm in the lateral direction and ∼50 nm in the axial direction at time resolutions as fast as 1-2 s with several independent snapshots. Using photoswitchable dyes with distinct emission wavelengths, we also demonstrated two-color {3D} super-resolution imaging in live cells. These imaging capabilities open a new window for characterizing cellular structures in living cells at the ultrastructural level.},
+	number = {6},
+	journal = {Nature Methods},
+	author = {Jones, Sara A and Shim, {Sang-Hee} and He, Jiang and Zhuang, Xiaowei},
+	month = jun,
+	year = {2011},
+	note = {{PMID:} 21552254},
+	keywords = {Animals, Cell Line, Clathrin, Coated Pits, {Cell-Membrane}, Endocytosis, Fluorescent Dyes, Image Processing, {Computer-Assisted}, Microscopy, Fluorescence, Transferrin},
+	pages = {499--508}
 },
 
 @article{cronin_automated_2006,
@@ -1567,6 +1619,22 @@ are driven and organized by proprioceptive coupling},
 	note = {{PMID:} 11861469},
 	keywords = {Animals, Axons, Bacterial Proteins, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Cell Polarity, Drosophila Proteins, Gene Expression, Helminth Proteins, Homeodomain Proteins, Motor Neurons, Muscle Proteins, Mutagenesis, Nuclear Proteins, Protozoan Proteins, Transcription Factors},
 	pages = {853--862}
+},
+
+@article{klein_live-cell_2011,
+	title = {Live-cell {dSTORM} with {SNAP-tag} fusion proteins},
+	volume = {8},
+	issn = {1548-7105},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21191367},
+	doi = {10.1038/nmeth0111-7b},
+	number = {1},
+	journal = {Nature Methods},
+	author = {Klein, Teresa and Löschberger, Anna and Proppert, Sven and Wolter, Steve and van de Linde, Sebastian and Sauer, Markus},
+	month = jan,
+	year = {2011},
+	note = {{PMID:} 21191367},
+	keywords = {Animals, Cell Line, Histones, Humans, Image Interpretation, {Computer-Assisted}, Mice, Microscopy, Fluorescence, Recombinant Fusion Proteins, Stochastic Processes},
+	pages = {7--9}
 },
 
 @article{steinhauer_dna_2009,
@@ -2187,6 +2255,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {383--396}
 },
 
+@article{cunin_biomolecular_2002,
+	title = {Biomolecular screening with encoded porous-silicon photonic crystals},
+	volume = {1},
+	issn = {1476-1122},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/12618846},
+	doi = {10.1038/nmat702},
+	abstract = {Strategies to encode or label small particles or beads for use in high-throughput screening and bioassay applications focus on either spatially differentiated, on-chip arrays or random distributions of encoded beads. Attempts to encode large numbers of polymeric, metallic or glass beads in random arrays or in fluid suspension have used a variety of entities to provide coded elements (bits)--fluorescent molecules, molecules with specific vibrational signatures, quantum dots, or discrete metallic layers. Here we report a method for optically encoding micrometre-sized nanostructured particles of porous silicon. We generate multilayered porous films in crystalline silicon using a periodic electrochemical etch. This results in photonic crystals with well-resolved and narrow optical reflectivity features, whose wavelengths are determined by the etching parameters. Millions of possible codes can be prepared this way. Micrometre-sized particles are then produced by ultrasonic fracture, mechanical grinding or by lithographic means. A simple antibody-based bioassay using fluorescently tagged proteins demonstrates the encoding strategy in biologically relevant media.},
+	number = {1},
+	journal = {Nature Materials},
+	author = {Cunin, Frédérique and Schmedake, Thomas A and Link, Jamie R and Li, Yang Yang and Koh, Jennifer and Bhatia, Sangeeta N and Sailor, Michael J},
+	month = sep,
+	year = {2002},
+	note = {{PMID:} 12618846},
+	keywords = {Animals, Antibodies, Antigens, Biosensing Techniques, Cattle, Crystallization, Fluorescence, Goats, Immunoassay, Membranes, Artificial, Molecular Probes, Porosity, Rabbits, Rats, Serum Albumin, Silicon Compounds},
+	pages = {39--41}
+},
+
 @article{andersen_self-assembly_2009,
 	title = {Self-assembly of a nanoscale {DNA} box with a controllable lid},
 	volume = {459},
@@ -2551,6 +2636,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	title = {Red Hat updates real-time Linux • The Register},
 	url = {http://www.theregister.co.uk/2009/02/10/redhat_mrg_fedora11/},
 	howpublished = {http://www.theregister.co.uk/2009/02/10/redhat\_mrg\_fedora11/}
+},
+
+@article{gautier_engineered_2008,
+	title = {An engineered protein tag for multiprotein labeling in living cells},
+	volume = {15},
+	issn = {1074-5521},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/18291317},
+	doi = {10.1016/j.chembiol.2008.01.007},
+	abstract = {The visualization of complex cellular processes involving multiple proteins requires the use of spectroscopically distinguishable fluorescent reporters. We have previously introduced the {SNAP-tag} as a general tool for the specific labeling of {SNAP-tag} fusion proteins in living cells. The {SNAP-tag} is derived from the human {DNA} repair protein {O6-alkylguanine-DNA} alkyltransferase {(AGT)} and can be covalently labeled in living cells using O6-benzylguanine derivatives bearing a chemical probe. Here we report the generation of an {AGT-based} tag, named {CLIP-tag}, which reacts specifically with O2-benzylcytosine derivatives. Because {SNAP-tag} and {CLIP-tag} possess orthogonal substrate specificities, {SNAP} and {CLIP} fusion proteins can be labeled simultaneously and specifically with different molecular probes in living cells. We furthermore show simultaneous pulse-chase experiments to visualize different generations of two different proteins in one sample.},
+	number = {2},
+	journal = {Chemistry \& Biology},
+	author = {Gautier, Arnaud and Juillerat, Alexandre and Heinis, Christian and Corrêa, Ivan Reis, Jr and Kindermann, Maik and Beaufils, Florent and Johnsson, Kai},
+	month = feb,
+	year = {2008},
+	note = {{PMID:} 18291317},
+	keywords = {Animals, Binding Sites, Cell Survival, {CHO} Cells, Cricetinae, Cricetulus, Cytosine, Fluorescent Dyes, Models, Molecular, Mutation, {O(6)-Methylguanine-DNA} Methyltransferase, Protein Conformation, Proteins, Staining and Labeling, Substrate Specificity},
+	pages = {128--136}
 },
 
 @article{lin_self-assembled_2007-1,
@@ -3097,6 +3199,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = jan,
 	year = {2006},
 	keywords = {Print Me!}
+},
+
+@article{keppler_general_2003,
+	title = {A general method for the covalent labeling of fusion proteins with small molecules in vivo},
+	volume = {21},
+	issn = {1087-0156},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/12469133},
+	doi = {10.1038/nbt765},
+	abstract = {Characterizing the movement, interactions, and chemical microenvironment of a protein inside the living cell is crucial to a detailed understanding of its function. Most strategies aimed at realizing this objective are based on genetically fusing the protein of interest to a reporter protein that monitors changes in the environment of the coupled protein. Examples include fusions with fluorescent proteins, the yeast two-hybrid system, and split ubiquitin. However, these techniques have various limitations, and considerable effort is being devoted to specific labeling of proteins in vivo with small synthetic molecules capable of probing and modulating their function. These approaches are currently based on the noncovalent binding of a small molecule to a protein, the formation of stable complexes between biarsenical compounds and peptides containing cysteines, or the use of biotin acceptor domains. Here we describe a general method for the covalent labeling of fusion proteins in vivo that complements existing methods for noncovalent labeling of proteins and that may open up new ways of studying proteins in living cells.},
+	number = {1},
+	journal = {Nature Biotechnology},
+	author = {Keppler, Antje and Gendreizig, Susanne and Gronemeyer, Thomas and Pick, Horst and Vogel, Horst and Johnsson, Kai},
+	month = jan,
+	year = {2003},
+	note = {{PMID:} 12469133},
+	keywords = {Animals, Biotin, {CHO} Cells, Cricetinae, Escherichia coli, Fluorescein, Humans, Ligands, Macromolecular Substances, Microscopy, Confocal, Microscopy, Fluorescence, Molecular Weight, {O(6)-Methylguanine-DNA} Methyltransferase, Protein Binding, Recombinant Fusion Proteins, Staining and Labeling, Yeasts},
+	pages = {86--89}
 },
 
 @article{ramot_bidirectional_2008-1,
@@ -3666,6 +3785,14 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 20731421},
 	keywords = {Automatic Data Processing, Fluorescent Dyes, Microscopy, Electron, Scanning, Nanotechnology, Nanotubes, Polyvinyls, Spectrophotometry, Ultraviolet},
 	pages = {4350--4360}
+},
+
+@unpublished{lin_sub-micrometer_2011,
+	title = {Sub-micrometer Geometrically Encoded Fluorescent Barcodes {Self-Assembled} from {DNA}},
+	author = {Lin, Chenxiang and Jungmann, Ralf and Leifer, Andrew M and Li, Chao and Levner, Daniel and Shih, William M and Yin, Peng},
+	month = oct,
+	year = {2011},
+	note = {Submitted to Nature Nanotechnology}
 },
 
 @article{gudiksen_growth_2002,
