Added in MATLAB block diagram figure. Finished chenxiangs paper.
Chenxiang's paper is basically done now. I fixed the references to supplementary material too.

--- a/references.bib
+++ b/references.bib
@@ -117,6 +117,23 @@
 	howpublished = {http://www.biology.utah.edu/jorgnsen\_cgi\_bin/publications}
 },
 
+@article{steinhauer_superresolution_2008,
+	title = {Superresolution microscopy on the basis of engineered dark states},
+	volume = {130},
+	issn = {1520-5126},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19053449},
+	doi = {10.1021/ja806590m},
+	abstract = {New concepts for superresolution fluorescence microscopy by subsequent localization of single molecules using photoswitchable or photoactivatable fluorophores are rapidly emerging and provide new ways to resolve structures beyond the diffraction limit. Here, we demonstrate that superresolution imaging can be carried out with practically every single-molecule compatible, synthetic fluorophore by controlling their emission properties. We prepare dark states by removing oxygen that extends the triplet state lifetime to several milliseconds. We further increase the duration of the off-states using electron transfer reactions to create radical ion states of severalfold longer lifetimes. Imaging single molecules, actin filaments, and microtubules in fixed cells as well as simulations demonstrate that the thus created dark states are sufficiently long for resolution of approximately 50 nm.},
+	number = {50},
+	journal = {Journal of the American Chemical Society},
+	author = {Steinhauer, Christian and Forthmann, Carsten and Vogelsang, Jan and Tinnefeld, Philip},
+	month = dec,
+	year = {2008},
+	note = {{PMID:} 19053449},
+	keywords = {Actins, Microscopy, Fluorescence, Sensitivity and Specificity},
+	pages = {16840--16841}
+},
+
 @article{marcon_--fly_2010,
 	title = {{'On-the-fly'} optical encoding of combinatorial peptide libraries for profiling of protease specificity},
 	volume = {6},
@@ -216,7 +233,7 @@
 	title = {Light Activation of Channelrhodopsin-2 in Excitable Cells of Caenorhabditis elegans Triggers Rapid Behavioral Responses},
 	volume = {15},
 	issn = {0960-9822},
-	url = {http://www.sciencedirect.com.ezp-prod1.hul.harvard.edu/science/article/B6VRT-4HV7CDJ-W/2/c2d98908e8dbee2808aa298cf3c7e0d2},
+	url = {http://www.sciencedirect.com/science/article/B6VRT-4HV7CDJ-W/2/c2d98908e8dbee2808aa298cf3c7e0d2},
 	doi = {10.1016/j.cub.2005.11.032},
 	abstract = {Summary
 For studying the function of specific neurons in their native circuitry, it is desired to precisely control their activity. This often requires dissection to allow accurate electrical stimulation [1] or neurotransmitter application [2], and it is thus inherently difficult in live animals, especially in small model organisms. Here, we employed channelrhodopsin-2 {(ChR2)}, a directly light-gated cation channel from the green alga Chlamydomonas reinhardtii [3], in excitable cells of the nematode Caenorhabditis elegans, to trigger specific behaviors, simply by illumination. Channelrhodopsins 3 and 4 are 7-transmembrane-helix proteins that resemble the light-driven proton pump bacteriorhodopsin [5], and they also utilize the chromophore all-trans retinal, but to open an intrinsic cation pore. In muscle cells, light-activated {ChR2} evoked strong, simultaneous contractions, which were reduced in the background of mutated L-type, voltage-gated Ca2+-channels {(VGCCs)} and ryanodine receptors {(RyRs).} Electrophysiological analysis demonstrated rapid inward currents that persisted as long as the illumination. When {ChR2} was expressed in mechanosensory neurons, light evoked withdrawal behaviors that are normally elicited by mechanical stimulation. Furthermore, {ChR2} enabled activity of these neurons in mutants lacking the {MEC-4/MEC-10} mechanosensory ion channel [6]. Thus, specific neurons or muscles expressing {ChR2} can be quickly and reversibly activated by light in live and behaving, as well as dissected, animals.},
@@ -641,7 +658,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	abstract = {Transformation of mechanical energy into ionic currents is essential for touch, hearing and nociception. Although {DEG/ENaC} proteins are believed to form sensory mechanotransduction channels, the evidence for this role remains indirect. By recording from C. elegans touch receptor neurons in vivo, we found that external force evokes rapidly activating mechanoreceptor currents {(MRCs)} carried mostly by Na(+) and blocked by amiloride-characteristics consistent with direct mechanical gating of a {DEG/ENaC} channel. Like mammalian Pacinian corpuscles, these neurons depolarized with both positive and negative changes in external force but not with sustained force. Null mutations in the {DEG/ENaC} gene mec-4 and in the accessory ion channel subunit genes mec-2 and mec-6 eliminated {MRCs.} In contrast, the genetic elimination of touch neuron-specific microtubules reduced, but did not abolish, {MRCs.} Our findings link the application of external force to the activation of a molecularly defined metazoan sensory transduction channel.},
 	number = {1},
 	journal = {Nature Neuroscience},
-	author = {{O'Hagan}, Robert and Chalfie, Martin and Goodman, Miriam B},
+	author = {O'hagan, Robert and Chalfie, Martin and Goodman, Miriam B},
 	month = jan,
 	year = {2005},
 	note = {{PMID:} 15580270},
@@ -1024,7 +1041,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	booktitle = {Wormbook},
 	publisher = {{WormBook}},
 	author = {Mango, Susan E.},
-	editor = {The C. Elegans Research Community},
+	editor = {The C. elegans Research Community},
 	month = jan,
 	year = {2007}
 },
@@ -1212,6 +1229,22 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	url = {http://www.jestinstoffel.com/?q=node/112},
 	keywords = {{OpenCV}, Programming},
 	howpublished = {http://www.jestinstoffel.com/?q=node/112}
+},
+
+@article{kurien_extraction_2002,
+	title = {Extraction of nucleic acid fragments from gels},
+	volume = {302},
+	issn = {0003-2697},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/11846370},
+	doi = {10.1006/abio.2001.5526},
+	number = {1},
+	journal = {Analytical Biochemistry},
+	author = {Kurien, Biji T and Scofield, R Hal},
+	month = mar,
+	year = {2002},
+	note = {{PMID:} 11846370},
+	keywords = {Animals, Cloning, Molecular, {DNA}, Electrophoresis, Agar Gel, Electrophoresis, Polyacrylamide Gel, Humans},
+	pages = {1--9}
 },
 
 @misc{_wormatlas:_????,
@@ -1885,7 +1918,7 @@ When placed in open, liquid-filled, microfluidic chambers containing a square ar
 These results show that the microstructure can be used as a behavioral screen for mechanosensory and uncoordinated mutants. It is likely that worms use mechanosensation in the movement and navigation through heterogeneous environments.},
 	number = {6},
 	journal = {{PLoS} {ONE}},
-	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martinez, Fernando and Austin, Robert H. and Ryu, William S.},
+	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martínez, Fernando and Austin, Robert H. and Ryu, William S.},
 	year = {2008},
 	note = {{PMC2430527}},
 	keywords = {Caenorhabditis elegans, Locomotion, pdms, Touch},
@@ -2534,7 +2567,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = mar,
 	year = {2009},
 	note = {{PMID:} 19198595},
-	keywords = {Carbocyanines, Chromosomes, Human, Pair 17, Chromosomes, Human, Pair 7, Chromosomes, Human, Pair 8, {DNA}, {DNA} Primers, {DNA-Directed} {DNA} Polymerase, {DNA}, {Single-Stranded}, Exodeoxyribonucleases, Genetic Techniques, Haplotypes, Heterozygote, Homozygote, Humans, Microscopy, Fluorescence, Polymerase Chain Reaction, Polymorphism, Single Nucleotide, Sequence Analysis, {DNA}, Staining and Labeling, Tissue Plasminogen Activator},
+	keywords = {Carbocyanines, Chromosomes, Human, Pair 17, Chromosomes, Human, Pair 7, Chromosomes, Human, Pair 8, {DNA}, {DNA} Primers, {DNA}, {Single-Stranded}, {DNA-Directed} {DNA} Polymerase, Exodeoxyribonucleases, Genetic Techniques, Haplotypes, Heterozygote, Homozygote, Humans, Microscopy, Fluorescence, Polymerase Chain Reaction, Polymorphism, Single Nucleotide, Sequence Analysis, {DNA}, Staining and Labeling, Tissue Plasminogen Activator},
 	pages = {199--201}
 },
 
@@ -2674,7 +2707,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 @article{nagel_channelrhodopsin-2_2003,
 	title = {Channelrhodopsin-2, a directly light-gated cation-selective membrane channel},
 	volume = {100},
-	url = {http://www.pnas.org.ezp-prod1.hul.harvard.edu/content/100/24/13940.abstract},
+	url = {http://www.pnas.org/content/100/24/13940.abstract},
 	doi = {10.1073/pnas.1936192100},
 	abstract = {Microbial-type rhodopsins are found in archaea, prokaryotes, and eukaryotes. Some of them represent membrane ion transport proteins such as bacteriorhodopsin, a light-driven proton pump, or channelrhodopsin-1 {(ChR1)}, a recently identified light-gated proton channel from the green alga Chlamydomonas reinhardtii. {ChR1} and {ChR2}, a related microbial-type rhodopsin from C. reinhardtii, were shown to be involved in generation of photocurrents of this green alga. We demonstrate by functional expression, both in oocytes of Xenopus laevis and mammalian cells, that {ChR2} is a directly light-switched cation-selective ion channel. This channel opens rapidly after absorption of a photon to generate a large permeability for monovalent and divalent cations. {ChR2} desensitizes in continuous light to a smaller steady-state conductance. Recovery from desensitization is accelerated by extracellular H+ and negative membrane potential, whereas closing of the {ChR2} ion channel is decelerated by intracellular H+. {ChR2} is expressed mainly in C. reinhardtii under low-light conditions, suggesting involvement in photoreception in dark-adapted cells. The predicted seven-transmembrane α helices of {ChR2} are characteristic for G protein-coupled receptors but reflect a different motif for a cation-selective ion channel. Finally, we demonstrate that {ChR2} may be used to depolarize small or large cells, simply by illumination.},
 	number = {24},
@@ -2803,6 +2836,22 @@ These results show that the microstructure can be used as a behavioral screen fo
 	author = {Lee, R. {Y.N} and Sawin, E. R and Chalfie, M. and Horvitz, H. R and Avery, L.},
 	year = {1999},
 	pages = {159}
+},
+
+@article{lis_size_1975,
+	title = {Size fractionation of double-stranded {DNA} by precipitation with polyethylene glycol},
+	volume = {2},
+	issn = {0305-1048},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/236548},
+	abstract = {We show that {DNA} molecules of differing molecular mass are separable by selective precipitation with polyethylene glycol {(PEG+..} Higher molecular mass {DNA} precipitates at lower {PEG} concentrations than lower molecular mass {DNA.} Double-stranded {DNA} can be fractionated at least in the range of 3 times 10-7 to 1 times 10-5 daltons. The effects on {PEG} concentration, sodium chloride concentration, {DNA} concentration, {pH}, divalent ions, precipitation time, and centrifugal force have been determined. These studies show {PEG} precipitation offers a size fractionation method for {DNA} which is convenient, of high capacity, and applicable over a wide range of conditions. However, resolution is not high and separation of two species approaches 100\% only if they differ in molecular mass by at least a factor of two.},
+	number = {3},
+	journal = {Nucleic Acids Research},
+	author = {Lis, J T and Schleif, R},
+	month = mar,
+	year = {1975},
+	note = {{PMID:} 236548},
+	keywords = {Cations, Divalent, Coliphages, Deoxyribonucleases, {DNA} Viruses, {DNA}, Viral, Electrophoresis, Polyacrylamide Gel, Endonucleases, Haemophilus influenzae, {Hydrogen-Ion} Concentration, Methods, Molecular Weight, Osmolar Concentration, Polyethylene Glycols, Sodium Chloride, Time Factors, Ultracentrifugation},
+	pages = {383--389}
 },
 
 @book{bradski_learning_2008,
@@ -3067,7 +3116,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	title = {The motor circuit},
 	volume = {69},
 	issn = {0074-7742},
-	url = {http://www.ncbi.nlm.nih.gov.ezp-prod1.hul.harvard.edu/pubmed/16492464},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16492464},
 	doi = {10.1016/S0074-7742(05)69005-8},
 	abstract = {Caenorhabditis elegans motor neurons control a range of activities including locomotion, foraging, defecation, and gender-specific functions. In this chapter,we focus primarily on motor neurons that regulate body movement, with particular emphasis on those in the ventral nerve cord {(VNC).} We describe the basic architecture and development of the motor circuit, genes that specify motor neuron fates, and models of how the motor circuit controls locomotion. We identify surprising similarities between the structure and development of the nematode and vertebrate axial nerve cords and speculate about the potential roles of conserved families of transcription factors in the evolution of these motor circuits.},
 	journal = {International Review of Neurobiology},
@@ -3111,7 +3160,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {1952--1958}
 },
 
-@article{steinhauer_superresolution_2008,
+@article{steinhauer_superresolution_2008-1,
 	title = {Superresolution microscopy on the basis of engineered dark states},
 	volume = {130},
 	issn = {1520-5126},
@@ -3348,6 +3397,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 12007416},
 	keywords = {Animals, Caenorhabditis elegans, Chemoreceptor Cells, Chemotaxis, Head, Movement, Neurons, Afferent, Signal Transduction, Tail},
 	pages = {730--734}
+},
+
+@article{rothemund_folding_2006-1,
+	title = {Folding {DNA} to create nanoscale shapes and patterns},
+	volume = {440},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16541064},
+	doi = {10.1038/nature04586},
+	abstract = {{'Bottom-up} fabrication', which exploits the intrinsic properties of atoms and molecules to direct their self-organization, is widely used to make relatively simple nanostructures. A key goal for this approach is to create nanostructures of high complexity, matching that routinely achieved by 'top-down' methods. The self-assembly of {DNA} molecules provides an attractive route towards this goal. Here I describe a simple method for folding long, single-stranded {DNA} molecules into arbitrary two-dimensional shapes. The design for a desired shape is made by raster-filling the shape with a 7-kilobase single-stranded scaffold and by choosing over 200 short oligonucleotide 'staple strands' to hold the scaffold in place. Once synthesized and mixed, the staple and scaffold strands self-assemble in a single step. The resulting {DNA} structures are roughly 100 nm in diameter and approximate desired shapes such as squares, disks and five-pointed stars with a spatial resolution of 6 nm. Because each oligonucleotide can serve as a 6-nm pixel, the structures can be programmed to bear complex patterns such as words and images on their surfaces. Finally, individual {DNA} structures can be programmed to form larger assemblies, including extended periodic lattices and a hexamer of triangles (which constitutes a 30-megadalton molecular complex).},
+	number = {7082},
+	journal = {Nature},
+	author = {Rothemund, Paul W K},
+	month = mar,
+	year = {2006},
+	note = {{PMID:} 16541064},
+	keywords = {Art, Bacteriophage M13, Biopolymers, {DNA}, {DNA}, {Single-Stranded}, {DNA}, Viral, Microscopy, Atomic Force, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
+	pages = {297--302}
 },
 
 @article{xu_multiplexed_2003,
